==============
lxml changelog
==============

Under development
=================

Features added
--------------

* Support strings and instantiable Element classes as child arguments
  to the constructor of custom Element classes.

* GZip compression support for serialisation to files and file-like
  objects.

Bugs fixed
----------

* Crash in XSLT when overwriting an already defined attribute using
  ``xsl:attribute``.

* Crash bug in exception handling code under Python 3.  This was due
  to a problem in Cython, not lxml itself.

* ``lxml.html.FormElement._name()`` failed for non top-level forms.

* ``TAG`` special attribute in constructor of custom Element classes
  was evaluated incorrectly.

Other changes
-------------

* Official support for Python 3.0.1.

* ``Element.findtext()`` now returns an empty string instead of None
  for Elements without text content.


2.2beta3 (2009-02-17)
=====================

Features added
--------------

* ``XSLT.strparam()`` class method to wrap quoted string parameters
  that require escaping.

Bugs fixed
----------

* Memory leak in XPath evaluators.

* Crash when parsing indented XML in one thread and merging it with
  other documents parsed in another thread.

* Setting the ``base`` attribute in ``lxml.objectify`` from a unicode
  string failed.

* Fixes following changes in Python 3.0.1.

* Minor fixes for Python 3.

Other changes
-------------

* The global error log (which is copied into the exception log) is now
  local to a thread, which fixes some race conditions.

* More robust error handling on serialisation.


2.2beta2 (2009-01-25)
=====================

Bugs fixed
----------

* Potential memory leak on exception handling.  This was due to a
  problem in Cython, not lxml itself.

* ``iter_links`` (and related link-rewriting functions) in
  ``lxml.html`` would interpret CSS like ``url("link")`` incorrectly
  (treating the quotation marks as part of the link).
